welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: ')' expected but ';' found.
do{ avance()} while (estSurBlanc();) 
                                  ^Program:2: error: illegal start of statement
do{ avance()} while (estSurBlanc();) 
                                   ^